--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "typescript": "^5.0.4",
+    "vite": "^4.0.0",
+    "vite-plugin-tsconfig-paths": "^1.3.0"
   }
 }
