--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
         "src/*": ["src/*"]
       }
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "include": ["src/**/*.ts", "src/**/*.tsx, ../components/"],
     "exclude": ["node_modules"]
   }
