--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-transition-group": "^4.4.5",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-filters": "^3.0.0",
     "vite-plugin-windicss": "^1.9.0"
   },
   "devDependencies": {
