--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
+    "framer-motion": "^12.6.3",
     "niko-hoffren-homepage": "file:",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.6.1",
     "react-transition-group": "^4.4.5",
     "react-typing-effect": "^2.0.5",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-filters": "^3.0.0",
-    "vite-plugin-windicss": "^1.9.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-transition-group": "^4.4.6",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "tailwindcss-filters": "^3.0.0",
     "typescript": "^5.0.4",
     "vite": "^4.0.0",
     "vite-plugin-tsconfig-paths": "^1.3.0"
